--- a/myApp05/www/css/style.css
+++ b/myApp05/www/css/style.css
@@ -15,7 +15,7 @@ img{
 .age{
   width: auto;
 }
-.body-parts-list{
+.body-parts-list .item-content{
   direction: rtl;
 }
 .body-parts-list img{
@@ -24,4 +24,13 @@ img{
 
 .item-complex.item-icon-left .item-content{
   padding-right: 70px;
+}
+
+.scroll {
+    height: 100%;
+}
+
+#map {
+    width: 100%;
+    height: 100%;
 }
