--- a/Backend/frontEnd/backoffice/js/templates/symptoms/index.hbs
+++ b/Backend/frontEnd/backoffice/js/templates/symptoms/index.hbs
@@ -9,12 +9,12 @@
 
           <div class="row">
 
-            <div class="col-md-4">
+            <!--div class="col-md-4">
               <div class="form-group">
                 <label>מספר סימפטום:</label>
                 {{input  type="text" class="form-control" valueBinding="search.symptomId"}}
               </div>
-            </div>
+            </div-->
 
             <div class="col-md-4">
               <div class="form-group">
