--- a/Backend/frontEnd/backoffice/js/templates/userReports/grid/actions.hbs
+++ b/Backend/frontEnd/backoffice/js/templates/userReports/grid/actions.hbs
@@ -1,5 +1,3 @@
-{{#linkTo 'stores.edit' view.content.storeNo class="btn btn-primary btn-sm"}}<i class="fa fa-edit"></i>{{/linkTo}}
+{{#linkTo 'userReports.edit' view.content.recNo class="btn btn-primary btn-sm"}}<i class="fa fa-edit"></i>{{/linkTo}}
 &nbsp;
-{{#linkTo 'stores.polygon' view.content.storeNo class="btn btn-info btn-sm"}}<i class="fa fa-map-marker"></i>{{/linkTo}}
-&nbsp;
-{{#linkTo 'stores.delete' view.content.storeNo class="btn btn-danger btn-sm"}}<i class="fa fa-trash-o"></i>{{/linkTo}}
+{{#linkTo 'userReports.delete' view.content.recNo class="btn btn-danger btn-sm"}}<i class="fa fa-trash-o"></i>{{/linkTo}}
