--- a/Backend/frontEnd/backoffice/js/templates/application.hbs
+++ b/Backend/frontEnd/backoffice/js/templates/application.hbs
@@ -7,7 +7,9 @@
 				
 				<ul class="nav navbar-nav">
 
-					<li class="first">{{#linkTo 'symptoms'}}<i class="fa fa-home"></i>סימפטומים{{/linkTo}}</li>
+				
+					<li class="first">{{#linkTo 'userReports'}}<i class="fa fa-home"></i>דיווחים{{/linkTo}}</li>
+					<li>{{#linkTo 'symptoms'}}<i class="fa fa-ambulance"></i>סימפטומים{{/linkTo}}</li>
 					<li>{{#linkTo 'users'}}<i class="fa fa-users"></i>מנהלים{{/linkTo}}</li>
 				<!--li>{{#linkTo 'stores'}}<i class="fa fa-home"></i>סניפים{{/linkTo}}</li>
 					<li>{{#linkTo 'vehicles'}}<i class="fa fa-car"></i>כלי רכב{{/linkTo}}</li>
