--- a/Backend/frontEnd/backoffice/js/templates/symptoms/grid/actions.hbs
+++ b/Backend/frontEnd/backoffice/js/templates/symptoms/grid/actions.hbs
@@ -1,3 +1,5 @@
 {{#linkTo 'symptoms.edit' view.content.symptomId class="btn btn-primary btn-sm"}}<i class="fa fa-edit"></i>{{/linkTo}}
 &nbsp;
+{{#linkTo 'symptoms.polygon' view.content.symptomId class="btn btn-info btn-sm"}}<i class="fa fa-map-marker"></i>{{/linkTo}}
+&nbsp;
 {{#linkTo 'symptoms.delete' view.content.symptomId class="btn btn-danger btn-sm"}}<i class="fa fa-trash-o"></i>{{/linkTo}}
