--- a/Backend/frontEnd/backoffice/js/templates/symptoms/modal.hbs
+++ b/Backend/frontEnd/backoffice/js/templates/symptoms/modal.hbs
@@ -17,7 +17,7 @@
 
           <div class="row">
 
-            <div class="col-md-4">
+            <!--div class="col-md-4">
               <div class="form-group">
                 {{#unless symptom.isnew}}
                   <label>מספר סימפטום:</label>
@@ -27,7 +27,7 @@
                   {{input type="text" class="form-control" valueBinding="symptom.symptomId" parsley-type="number" required="required"}}
                 {{/unless}}
               </div>
-            </div>
+            </div-->
             
             <div class="col-md-4">
               <div class="form-group">
@@ -60,6 +60,19 @@
               <div class="form-group">
                 <label>סף התפרצות (דיווחים):</label>
                 {{input type="text" class="form-control" valueBinding="symptom.epidemicThreshold" parsley-type="number" required="required"}}
+              </div>
+            </div>
+			
+			<div class="col-md-4">
+              <div class="form-group">
+                <label>טווח חיפוש:</label>
+				{{view Em.Select classNames="form-control" 
+                  contentBinding="App.symptomsPrecisions" 
+                  optionValuePath="content.id"
+                  optionLabelPath="content.name"
+                  valueBinding="symptom.precision"
+                  prompt="טווח חיפוש..."
+                  required="required"}}
               </div>
             </div>
 
