--- a/Backend/frontEnd/backoffice/js/templates/userReports/index.hbs
+++ b/Backend/frontEnd/backoffice/js/templates/userReports/index.hbs
@@ -5,41 +5,46 @@
 		<div class="panel-label">חיפוש</div>
 	</div>
 	<div class="panel-body" style="background-color: #f4f4f4;">
-		  <form>
+		<form>
 
           <div class="row">
 
-            <div class="col-md-4">
+			<div class="col-md-4">
               <div class="form-group">
-                <label>שם סניף:</label>
-                {{input  type="text" class="form-control" valueBinding="search.storeName"}}
-              </div>
-            </div>
-
-            <div class="col-md-4">
-              <div class="form-group">
-                <label>מספר סניף:</label>
-                {{input  type="text" class="form-control" valueBinding="search.storeNo"}}
-              </div>
-            </div>
-
-            <div class="col-md-4">
-              <div class="form-group">
-                <label>אזור:</label>
+                <label>מין:</label>
                 {{view Em.Select classNames="form-control" 
-                  contentBinding="App.storesRegions" 
+                  contentBinding="App.userReportsGenders" 
                   optionValuePath="content.id"
                   optionLabelPath="content.name"
-                  valueBinding="search.region"
+                  valueBinding="search.gender"
                   prompt="בחר..."
-                  required="required"}}
+				  }}
               </div>
             </div>
-     
 
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>גיל:</label>
+                {{input  type="text" class="form-control" valueBinding="search.age"}}
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>סימפטום:</label>
+                {{view Em.Select classNames="form-control" 
+                  contentBinding="App.userReportsSymptomIds" 
+                  optionValuePath="content.id"
+                  optionLabelPath="content.name"
+                  valueBinding="search.symptomId"
+                  prompt="בחר..."
+                  }}
+              </div>
+            </div>
+			
         </div>
 
-        </form>
+    </form>
 	</div>
 </div>
 
